--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -5,12 +5,12 @@
 {% block body %}
     <h1>Register</h1>
 
-    {{ form_start(registrationForm) }}
-        {{ form_row((registrationForm.name)) }}
-        {{ form_row(registrationForm.email) }}
-        {{ form_row(registrationForm.plainPassword) }}
-        {{ form_row(registrationForm.agreeTerms) }}
+    {{ form_start(form) }}
+        {{ form_row((form.name)) }}
+        {{ form_row(form.email) }}
+        {{ form_row(form.plainPassword) }}
+        {{ form_row(form.agreeTerms) }}
 
         <button class="btn">Register</button>
-    {{ form_end(registrationForm) }}
+    {{ form_end(form) }}
 {% endblock %}
