--- a/assets/materialize/sass/components/_grid.scss
+++ b/assets/materialize/sass/components/_grid.scss
@@ -3,19 +3,22 @@
   max-width: 1280px;
   width: 90%;
 }
+
 @media #{$medium-and-up} {
   .container {
-    width: 85%;
+    width: 100%;
   }
 }
+
 @media #{$large-and-up} {
   .container {
-    width: 70%;
+    width: 98%;
   }
 }
+
 .col .row {
-  margin-left: (-1 * $gutter-width / 2);
-  margin-right: (-1 * $gutter-width / 2);
+  margin-left: $container-gutter-width;
+  margin-right: $container-gutter-width;
 }
 
 .section {
@@ -25,9 +28,11 @@
   &.no-pad {
     padding: 0;
   }
+
   &.no-pad-bot {
     padding-bottom: 0;
   }
+
   &.no-pad-top {
     padding-top: 0;
   }
@@ -40,6 +45,7 @@
   left: auto;
   right: auto;
 }
+
 @mixin grid-classes($size, $i, $perc) {
   &.offset-#{$size}#{$i} {
     margin-left: $perc;
