--- a/assets/materialize/sass/components/_navbar.scss
+++ b/assets/materialize/sass/components/_navbar.scss
@@ -14,7 +14,7 @@ nav {
   }
 
   color: $navbar-font-color;
-  @extend .z-depth-1;
+  @extend .z-depth-2;
   background-color: $primary-color;
   width: 100%;
   height: $navbar-height-mobile;
@@ -60,6 +60,8 @@ nav {
   .brand-logo {
     position: absolute;
     color: $navbar-font-color;
+    font-weight: bold;
+    letter-spacing: -2px;
     display: inline-block;
     font-size: $navbar-brand-font-size;
     padding: 0;
