--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -1,10 +1,2 @@
-{% extends 'base.html.twig' %}
-
-{% block body %}
-
-{% endblock %}
-
-{% block title %}
-
-{% endblock %}
+{% extends 'layout/base.html.twig' %}
 
